--- a/Styles/style.css
+++ b/Styles/style.css
@@ -115,7 +115,7 @@ li {
   overflow: hidden;
   animation-name: decreaseHeight;
   animation-timing-function: ease-in;
-  animation-duration: 1s;
+  animation-duration: 0.5s;
   animation-iteration-count: 1;
   animation-fill-mode: both;
 }
@@ -146,7 +146,7 @@ li {
   overflow: hidden;
   animation-name: increaseHeight;
   animation-timing-function: ease-in;
-  animation-duration: 1s;
+  animation-duration: 0.5s;
   animation-iteration-count: 1;
   animation-fill-mode: both;
 }
@@ -602,7 +602,7 @@ form {
 
 textarea {
   margin-top: 10px;
-  padding: 20%;
+  padding: 10%;
   outline: none;
   border: none;
 }
@@ -646,7 +646,7 @@ textarea {
 }
 
 .foot1 {
-  margin: 4px 8px 0px 0;
+  margin: 4px 0px 0px 0;
   height: auto;
   font-family: "montserrat";
   font-size: 12px;
@@ -777,7 +777,7 @@ p {
 
   .notVisible {
     height: 60.5px;
-    animation-duration: 1.5s;
+    animation-duration: 1s;
   }
   
   @keyframes decreaseHeight {
@@ -799,7 +799,7 @@ p {
   }
   
   .visible{
-    animation-duration: 1.5s;
+    animation-duration: 1s;
   }
   
   @keyframes increaseHeight {
@@ -857,6 +857,13 @@ p {
 
   .testimony_box{
     padding: 0 10%;
+  }
+
+  textarea {
+    margin-top: 10px;
+    padding: 20%;
+    outline: none;
+    border: none;
   }
 
   .foot1 {
@@ -1055,5 +1062,12 @@ p {
 
   .testimony_box{
     padding: 0 20%;
+  }
+
+  textarea {
+    margin-top: 10px;
+    padding: 20%;
+    outline: none;
+    border: none;
   }
 }
