trying to find my error

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -40,8 +40,8 @@ html {
 }
 
 .she_code_logo {
-  /* height: 50px; */
-  width: 40px;
+  height: 70px;
+  width: 100%;
 }
 
 .largeScreen_nav {
@@ -887,8 +887,6 @@ p {
   }
 }
 
-
-
 @media screen and (min-width: 880px) {
   .menu {
     display: none;
@@ -1051,7 +1049,7 @@ p {
   }
 
   .contact_step2 {
-    display: flex; 
+    display: flex;
   }
 
   .contactUs {
