Further adjustment of log size

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -35,13 +35,8 @@ html {
   height: auto;
 }
 
-.logo {
-  height: 70px;
-}
-
 .she_code_logo {
-  height: 70px;
-  width: 100%;
+  width: 48px;
 }
 
 .largeScreen_nav {
